Archive2/20/6a3cd83b21d497/output
main.cpp:14:14: error: use of undeclared identifier 'x'
    cout <<  x << endl;
             ^
main.cpp:12:29: warning: for loop has empty body [-Wempty-body]
for (int x = 0; x <= 8; x++); {
                            ^
main.cpp:12:29: note: put the semicolon on a separate line to silence this warning
1 warning and 1 error generated.
